@@ -27,14 +27,9 @@ import org.apache.avro.io.Encoder;
 import org.apache.avro.ipc.AvroRemoteException;
 import org.apache.avro.ipc.Requestor;
 import org.apache.avro.ipc.Transceiver;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 /** {@link Requestor} implementation for generic Java data. */
 public class GenericRequestor extends Requestor {
-  private static final Logger LOG
-    = LoggerFactory.getLogger(GenericRequestor.class);
-
   public GenericRequestor(Protocol protocol, Transceiver transceiver)
     throws IOException {
     super(protocol, transceiver);
