@@ -33,18 +33,11 @@ import org.junit.Before;
 import org.junit.Test;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
-import java.io.*;
+import java.io.IOException;
 import java.net.InetSocketAddress;
-import java.nio.ByteBuffer;
-import java.util.Random;
-
 
 public class TestNamespaceSpecific {
-  private static final Logger LOG
-    = LoggerFactory.getLogger(TestNamespaceSpecific.class);
 
   public static class TestImpl implements TestNamespace {
     public TestRecord echo(TestRecord record) { return record; }
