@@ -23,7 +23,11 @@ import org.apache.avro.generic.GenericData;
 import org.apache.avro.generic.GenericRecord;
 import org.apache.avro.generic.GenericRequestor;
 import org.apache.avro.generic.GenericResponder;
-import org.apache.avro.ipc.*;
+import org.apache.avro.ipc.AvroRemoteException;
+import org.apache.avro.ipc.Requestor;
+import org.apache.avro.ipc.SocketServer;
+import org.apache.avro.ipc.SocketTransceiver;
+import org.apache.avro.ipc.Transceiver;
 import org.apache.avro.util.Utf8;
 import org.junit.After;
 import org.junit.Before;
